--- a/toDoViews/style.css
+++ b/toDoViews/style.css
@@ -44,11 +44,8 @@
     margin: 0;
     padding: 0;
   }
-  input[type=checkbox] {
-    vertical-align: auto ;
-    position: relative;
-    bottom: 1px;
-}
+
+ 
   ul li {
     cursor: pointer;
     position: relative;
@@ -56,7 +53,7 @@
     background: #eee;
     font-size: 18px;
     transition: 0.2s;
-
+    overflow-y: auto;
   }
 
   ul li:hover {
