--- a/toDoViews/style.css
+++ b/toDoViews/style.css
@@ -6,6 +6,14 @@
     text-align: center;
     color: #333;
   }
+  form {
+    margin: 0 auto;
+    width: 50%;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
   .todo-item{
     margin-bottom: 10px;
   }
@@ -39,13 +47,13 @@
   * {
     box-sizing: border-box;
   }
- 
+  /* Remove margins and padding from the list */
   ul {
     margin: 0;
     padding: 0;
   }
 
- 
+  /* Style the list items */
   ul li {
     cursor: pointer;
     position: relative;
@@ -53,19 +61,28 @@
     background: #eee;
     font-size: 18px;
     transition: 0.2s;
-    overflow-y: auto;
+
+    /* make the list items unselectable 
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    */
   }
 
+  /* Darker background-color on hover */
   ul li:hover {
     background: #ddd;
   }
 
+  /* When clicked on, add a background color and strike out text */
   ul li.checked {
     background: #888;
     color: #fff;
-    text-decoration: line-through;     
+    text-decoration: line-through;
   }
 
+  /* Add a "checked" mark when clicked on */
   ul li.checked::before {
     content: '';
     position: absolute;
@@ -79,6 +96,7 @@
     width: 7px;
   }
 
+  /* Style the close button */
   .close {
     position: absolute;
     right: 0;
