--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,6 +18,14 @@
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+        } 
+        #navbar p {
+            float: right;
+            display: block;
+            color: black;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
         }
         #navbar a:hover {
             background-color: #ddd;
@@ -29,13 +37,17 @@
     </style>
 </head>
 <body>
+    <%- include('partials/header.ejs') %>
     <div id="navbar">
         <a href="/home">Home</a>
         <a href="/todos">Todos</a>
         <a href="/about">About</a>        
         <a href="/contact">Contact</a>
         <a href="/logout">Logout</a>
+        <!-- <p>Welcome </p> -->
     </div>
+     <!-- Include data from data.json using data.ejs partial -->
+     <%- include('partials/data.ejs') %>
     <div id="content">
         <h1>Welcome to the Dashboard</h1>
         <p>Welcome to the dashboard. To access the todos use the Todos option in nav bar. To logout press logout. </p>
