--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign Up</title>
     <style>
-        body, html {
+       body, html {
             background-color: #A1CCD1;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
         }
-        
-        h2{
-        text-align: center;
-        } 
 
         .container {
             max-width: 400px;
@@ -29,6 +25,7 @@
         }
 
         input[type="text"],
+        input[type="email"],
         input[type="password"] {
             padding: 10px;
             font-size: 16px;
@@ -53,17 +50,20 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login</h2>
-        <form id="login-form" action="/login" method="post">
+        <h2>Create an Account</h2>
+        <form id="signup-form" action="create-account" method="post">
+
+            <label for="username">Name:</label>
+            <input type="text" id="username" name="username" required>
+
             <label for="email">Email Address:</label>
-            <input type="text" id="email" name="email" required>
+            <input type="email" id="email" name="email" required>
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Log In</button>
+            <button type="submit">Sign Up</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
 </body>
 </html>
