few small modifications

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,10 +46,10 @@
         <a href="/logout">Logout</a>
         <!-- <p>Welcome </p> -->
     </div>
-     <!-- Include data from data.json using data.ejs partial -->
+     <!-- Include data from user.json using data.ejs partial -->
      <%- include('partials/data.ejs') %>
     <div id="content">
-        <h1>Welcome to the Dashboard</h1>
+        <h1>This is the Dashboard</h1>
         <p>Welcome to the dashboard. To access the todos use the Todos option in nav bar. To logout press logout. </p>
     </div>
 </body>
