--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         }
 
         button:hover {
-            background-color: #7C9D96;
+            background-color: #3d5a80;
         }
     </style>
 </head>
