--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,7 +44,7 @@
         }
 
         button:hover {
-            background-color: #7C9D96;
+            background-color: #3d5a80;
         }
     </style>
 </head>
@@ -64,6 +64,7 @@
 
             <button type="submit">Sign Up</button>
         </form>
+        <a href="/login">Login</a>
     </div>
 </body>
 </html>
