--- a/views/partials/data.ejs
+++ b/views/partials/data.ejs
@@ -1,5 +1,5 @@
 <% if (data) { %>
-    <h3>Data from data.json:</h3>
+    <h3>Data from user.json:</h3>
     <% for (let i = 0; i < data.length; i++) { %>
         <li>
             <strong>Name:</strong> <%= data[i].username %>,
