--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <a href="/home">Home</a>
+    <%- include('partials/header.ejs') %>
       <h1>Todo List</h1>
         <div class="child" style="background-color:#ffe4e1">
           <h3>Task List</h3>
